# exo-beta-server

./: .gitignore  Cargo.toml  README.md  TODO.md  ops.toml  translation.json
src/: aabb.rs  api.rs  async.rs  async_systems.rs  bin.rs  chunks.rs  commands.rs  configuration.rs  entities.rs  entity_loader.rs  error.rs.old  feather_tick_loop.rs  game.rs  jvm.rs  lib.rs  logging.rs  main.rs  network.rs  objects.rs  physics.rs  player_count.rs  player_dat.rs  server.rs  sleep.rs  status_effects.rs  systems.rs  translation.json  translation.rs  world.rs
src/anvil-region/src/: provider.rs
src/block_entity/: mod.rs
src/configuration/: serde_error.rs
src/ecs/: event.rs  mod.rs
src/ecs/entities/: falling_block.rs  item.rs  mod.rs
src/ecs/entities/living/: mod.rs  zombie.rs
src/ecs/entities/living/hostile/: creeper.rs  mod.rs  skeleton.rs  spider.rs  zombie.rs
src/ecs/entities/living/passive/: chicken.rs  cow.rs  mod.rs  pig.rs  sheep.rs
src/ecs/entities/player/: mod.rs
src/ecs/systems/: chat.rs  mod.rs  stdin.rs  tablist.rs
src/ecs/systems/entities/: falling_block.rs  item.rs  mod.rs  player.rs
src/ecs/systems/entities/living/: damage.rs  mod.rs  zombie.rs
src/ecs/systems/entities/living/hostile/: creeper.rs  mod.rs  skeleton.rs  spider.rs  zombie.rs
src/ecs/systems/entities/living/passive/: chicken.rs  cow.rs  mod.rs  pig.rs  sheep.rs
src/ecs/systems/world/: block.rs  light.rs  loading.rs  mod.rs  ticking.rs  view.rs  weather.rs
src/ecs/systems/world/block/: place.rs  update.rs
src/entities/: entity_updates.rs  metadata.rs  spawn_packet.rs
src/events/: block_change.rs  block_interact.rs  mod.rs
src/game/: entities.rs  events.rs  gamerule.rs  items.rs  raycast.rs
src/game/entities/: gravel_entity.rs  item_entity.rs  mob_entity.rs  slime_entity.rs  tile_entity.rs
src/game/entities/mob_entity/: slime_entity.rs
src/game/entities/tile_entity/: trapdoor_tile_entity.rs
src/game/events/: block.rs
src/game/items/: armor.rs  block.rs  block_utils.rs  crafting.rs  default.rs
src/hecs/macros/src/: bundle.rs  query.rs
src/hecs/src/: archetype.rs  batch.rs  bundle.rs  entity_builder.rs  entity_ref.rs  query.rs  world.rs
src/item/: crafting.rs  default.rs  furnace.rs  inventory.rs  inventory_slot.rs  item.rs  mod.rs  recipes.rs  stack.rs  window.rs
src/item/default/: bed.rs  bush.rs  chest.rs  cobweb.rs  crafting_table.rs  dispenser.rs  door.rs  falling_block.rs  farmland.rs  fence.rs  fire.rs  furnace.rs  glass.rs  grass_block.rs  ice.rs  jukebox.rs  ladder.rs  leaves.rs  lever.rs  music_disc.rs  note_block.rs  ore.rs  portal.rs  pumpkin.rs  redstone.rs  sign.rs  slab.rs  stick.rs  sugar_cane.rs  trapdoor.rs  vines.rs  water_bucket.rs
src/item/default/bucket/: lava_bucket.rs  mod.rs  water_bucket.rs
src/item/default/crops/: mod.rs  wheat.rs
src/item/default/foods/: mod.rs
src/item/default/tools/: axe.rs  hoe.rs  mod.rs  pickaxe.rs  shovel.rs  sword.rs
src/item/inventory/: reference.rs
src/item/item/: block.rs
src/item/item/block/: fluid.rs
src/item/item/block/fluid/: lava.rs  water.rs
src/logging/: file.rs
src/network/: handshake.rs  ids.rs  message.rs  metadata.rs  packet.rs  worker.rs
src/network/packet/: builder.rs  handler.rs
src/network/packet/handler/: entity_action.rs  entity_animation.rs  interaction.rs  inventory.rs  movement.rs
src/plugins/: Cargo.toml  mod.rs
src/plugins/src/: lib.rs
src/protocol/: codec.rs  io.rs  mod.rs  packets.rs
src/protocol/packets/: client.rs  server.rs
src/protocol/packets/client/: handshake.rs  play.rs
src/protocol/packets/server/: login.rs  play.rs
src/protocol/packets/server/play/: chunk_data.rs
src/status_effects/: fire.rs  poison.rs
src/world/: cache.rs  chunk_entities.rs  chunk_lock.rs  chunk_map.rs  chunk_subscriptions.rs  chunks.rs  generation.rs  heightmap.rs  light.rs  mcregion.rs  mod.rs  nibblearray.rs  packed_array.rs  view.rs
src/world/generation/: mcvanillagenerator.rs
src/world/worker/: mod.rs  region.rs
test_plugins/test_plugin_1/: Cargo.toml
test_plugins/test_plugin_1/src/: lib.rs
