[package]
name = "exo_beta_server"
version = "0.2.0-alpha"
authors = ["Exopteron <exopteron@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
once_cell = "1.8.0"
tokio = { version = "1.10.1", features = ["full"] }
bytes = { version = "1.1.0", features = ["serde"] }
flume = "0.10.9"
anyhow = { version = "1.0.43", features = ["backtrace"] }
log = "0.4.1"
env_logger = "0.9.0"
chrono = "0.4.1"
slab = "0.4.4"
flate2 = { version = "1.0", features = ["zlib-ng-compat"], default-features = false }
deflate = "0.9.1"
multiarray = "0.1.3"
glam = "0.18.0"
rand = "0.8.4"
worldgen = "0.5.3"
toml = "0.5.8"
serde_derive = "1.0.130"
serde = "1.0.130"
gag = "1.0.0"
sysinfo = "0.20.4"
arrayvec = "0.5"
rand_xorshift = "0.3.0"
siphasher = "0.3.7"
named-binary-tag = "0.6.0"
ctrlc = "3.2.1"
rayon = "1.5.1"
libloading = "0.7"
# plugins = { path = "src/plugins" }
termion = "1.5.6"
libdeflater = "0.7.3"
reqwest = "0.11"
hex = "0.4.3"
anvil-region = { version = "0.8.0", path = "src/anvil-region" }
hecs = "0.6.5"
thiserror = "1"
byteorder = "1"
parking_lot = "0.11.2"
itertools = "0.10"
ucs2 = "0.3.2"
encoding = "0.2.33"
bitflags = "1.3.2"

[profile.dev.package.worldgen]
opt-level = 3
